RESOLVED FIXED36263
undefined, NaN, and Infinity should be ReadOnly
https://bugs.webkit.org/show_bug.cgi?id=36263
Summary undefined, NaN, and Infinity should be ReadOnly
Oliver Hunt
Reported 2010-03-17 19:18:41 PDT
undefined, NaN, and Infinity should be ReadOnly
Attachments
Patch (5.87 KB, patch)
2010-03-17 19:20 PDT, Oliver Hunt
barraclough: review+
Oliver Hunt
Comment 1 2010-03-17 19:20:58 PDT
Oliver Hunt
Comment 2 2010-03-17 19:25:35 PDT
Note You need to log in before you can comment on or make changes to this bug.