2010-03-17  Oliver Hunt  <oliver@apple.com>

Reviewed by Gavin Barraclough.

        undefined, NaN, and Infinity should be ReadOnly
        https://bugs.webkit.org/show_bug.cgi?id=36263

        Simply add the ReadOnly flag to these properties.

        * runtime/JSGlobalObject.cpp:
        (JSC::JSGlobalObject::reset):
2010-03-17  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        undefined, NaN, and Infinity should be ReadOnly
        https://bugs.webkit.org/show_bug.cgi?id=36263

        Add tests for the attributes of undefined, NaN and Infinity on the
        global object

        * fast/js/getOwnPropertyDescriptor-expected.txt:
        * fast/js/resources/getOwnPropertyDescriptor.js:

Canonical link: https://commits.webkit.org/47436@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56142 268f45cc-cd09-0410-ab3c-d52691b4dbfc